<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarTarefaFragment"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/txtview_novaTarefa_tarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nova_tarefa"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/layoutTarefa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/rodapeTarefa"
        app:layout_constraintTop_toBottomOf="@+id/txtview_novaTarefa_tarefa">


        <EditText
            android:id="@+id/editTxt_nova_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/titulo_tarefa"
            android:text="@string/titulo_tarefa"
            android:textEditSuggestionItemLayout="@string/titulo_tarefa"
            android:tooltipText="@string/titulo_tarefa" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spin_categoria_tarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/categoria" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prioridade"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spin_prioridade_tarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/prioridade" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_data_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/data_conclusao" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rodapeTarefa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal|bottom"
        app:layout_constraintTop_toBottomOf="@+id/layoutTarefa">

        <Button
            android:id="@+id/btn_cancelar_tarefa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"/>

        <Button
            android:id="@+id/btn_confirmar_tarefa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concluido"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>