<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mylifemanager.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tarefa"
        android:name="com.example.mylifemanager.ui.tarefa.TarefaFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_tarefa" />

    <fragment
        android:id="@+id/nav_habito"
        android:name="com.example.mylifemanager.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_habito" />

    <fragment
        android:id="@+id/nav_criarTarefaFragment"
        android:name="com.example.mylifemanager.CriarTarefaFragment"
        android:label="fragment_criar_tarefa"
        tools:layout="@layout/fragment_criar_tarefa" >
    </fragment>

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.mylifemanager.MapsDialogFragment"
        android:label="maps_dialog"
        tools:layout="@layout/fragment_maps_dialog" >
    </fragment>


</navigation>