<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:layout_gravity="center_horizontal"
    android:id="@+id/layout_categoria">

    <TextView
        android:id="@+id/txt_titulo_tarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecione_categoria"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scrollView2"
        />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/txt_titulo_tarefa"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_categoria_tarefa"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prioridade"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_prioridade_tarefa"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_conclusao"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_prazo_tarefa"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/rodape_categoria_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        android:gravity="center">

        <Button
            android:id="@+id/btn_ok_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concluido"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>